css, input mask, focus, refactor top

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -228,8 +228,12 @@ body {
   background-color: #d7f3d9;
 }
 
+.content-single .single-up {
+  padding: 10px 25px;
+}
+
 .content-single .single-top {
-  padding: 40px 25px;
+  padding: 10px 25px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -289,6 +293,14 @@ body {
 .content-single .single-bottom .weight input {
   font-weight: 700;
   text-align: center;
+  color: #000;
+}
+
+
+.content-single .single-bottom .weight input::placeholder,
+.content-single .single-bottom .weight input:disabled {
+  color: #000;
+  font-weight: 700;
 }
 
 .content-single .single-bottom .weight input::placeholder {
@@ -367,6 +379,7 @@ body {
 .content-single .single-bottom *:disabled {
   background-color: #fff;
   color: #000;
+  font-weight: bold;
 }
 
 #barcodeForm .modal .modal-body input {
